[package]
name = "tower-h2"
version = "0.1.0"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Oliver Gould <ver@buoyant.io>",
]
license = "MIT"
description = "Provides an HTTP/2.0 Tower Service"
publish = false

[workspace]

members = [
    "tower-balance",
    "tests",
]

[dependencies]
bytes = "0.4"
futures = "0.1"
h2 = "0.1.11"
http = "0.1"
log = "0.4"
tokio-connect = { git = "https://github.com/pantsbuild/tokio-connect", rev = "f7ad1ca437973d6e24037ac6f7d5ef1013833c0b" }
tokio-io = "0.1"
tower-service = { git = "https://github.com/pantsbuild/tower", rev = "7b61c1fc1992c1df684fd3f179644ef0ca9bfa4c" }
tower-util = { git = "https://github.com/pantsbuild/tower", rev = "7b61c1fc1992c1df684fd3f179644ef0ca9bfa4c" }

[dev-dependencies]
env_logger = { version = "^0.5", default-features = false }
string = { git = "https://github.com/carllerche/string" }
tokio = "0.1"
